--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "resume-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Egumma27.github.io/<repo-name>",
+  "homepage": "https://egumma27.github.io/resume-website",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.0"
   }
